2003-10-23 Damien Sandras  <dsandras@seconix.com>

	* src/common.h, src/config.cpp, src/pref_window.cpp: Display
	a warning when the user tries to enable video reception during
	a call.
	
2003-10-23 Damien Sandras  <dsandras@seconix.com>

	* src/config.cpp: Removed unuseful cout.

	* src/endpoint.cpp, src/endpoint.h: Code cleanups. Replaced the
	old GTK timeout for Non answered calls by a PWLib Notifier.
	That fixes a previous bug. Do not update the menu items individually
	in the code but use the 2 new menu.h functions written for that 
	purpose.
	
	* src/gdkvideoio.cpp, src/gdkvideoio.h:  Do not update the menu items 
	individually in the code but use the 2 new menu.h functions written 
	for that purpose.
	
	* src/menu.cpp, src/menu.h: Added a function that updates the 
	sensitivity of general menu items, non-related to the opening/closing
	of audio and video channels. Added another function that updates
	the sensitivity of general menu items related to the opening
	and closing of audio and video channels. Fixed previous bug
	so that the "Save snapshot" menu item is sensitive as soon
	as at least one video channel is opened (Reported by Kilian). 

	* src/urlhandler.cpp: Use the 2 previous functions.
	
2003-10-22 Damien Sandras  <dsandras@seconix.com>

	* src/config.cpp: Fixed possible bug in previous commit.
	
2003-10-22 Damien Sandras  <dsandras@seconix.com>

	* lib/gconf_widgets_extensions.c, lib/gconf_widgets_extensions.h:
	Added convenience functions to play with gconf settings.

	* src/config.cpp: Added notifiers to change H.245 Tunneling and
	Fast Start. Directly update capabilities list when needed and
	not at the end of calls.
	

	* src/endpoint.cpp, src/endpoint.h: See above.
	
2003-10-21 Damien Sandras  <dsandras@seconix.com>

	* NEWS: Updated with latest CVS news.

	* src/endpoint.cpp: Improved GetRemoteConnectionInfo so that it
	doesn't use GConf.
	
	* src/misc.cpp, src/misc.h: Improved incoming call dialog so that